force-app/zurich-base/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
    <description>Entity in which to store the consents related to a customer.</description>
    <label>Consentimiento</label>
    <nameField>
        <label>Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consentimientos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>