force-app/zurich-base/main/default/objects/Consent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Cliente al que le corresponde el consentimiento.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>