force-app/zurich-base/main/default/objects/Consent__c/fields/ConsentClientRel__c.field-meta.xml
<CustomField>
    <fullName>ConsentClientRel__c</fullName>
    <description>Campo que es informado a través del campo CONSENT_REL_ID recibido en la entidad ‘CONSENT’ de la External Request.</description>
    <label>Customer Consent Relationship Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>