force-app/zurich-base/main/default/objects/Consent__c/fields/ConsentId__c.field-meta.xml
<CustomField>
    <fullName>ConsentId__c</fullName>
    <description>Campo que es informado a través del campo CONSENT_ID recibido en la entidad ‘CONSENT’ de la External Request.</description>
    <label>Consent Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Sales by email/SMS between companies</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Profiles with own and third party data</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Transfer of data and profiles between companies</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Sales by email/SMS only within companies</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Sale by letter or call between companies</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Profiles with own data</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Profiles with own and usage data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>