force-app/zurich-base/main/default/objects/Consent__c/fields/ConsentPartnerCode__c.field-meta.xml
<CustomField>
    <fullName>ConsentPartnerCode__c</fullName>
    <description>Campo que es informado a través del campo CONSENT_PARTNER_CODE recibido en la entidad ‘CONSENT’ de la External Request.</description>
    <label>External Partner Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>