force-app/zurich-base/main/default/objects/Consent__c/fields/ConsentStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsentStatus__c</fullName>
    <description>Campo que es informado a través del campo CONSENT_STATUS recibido en la entidad ‘CONSENT’ de la External Request.</description>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Not sent</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Sent - awaiting response</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Sent - no response</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Accepted - signature pending</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Not accepted - signature pending</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Accepted - pending attach doc.</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Not accepted - pending attach doc.</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Not accepted</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Implicit accepted</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Revoked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>