force-app/zurich-base/main/default/objects/Consent__c/fields/ConsentUniqueId__c.field-meta.xml
<CustomField>
    <fullName>ConsentUniqueId__c</fullName>
    <description>Campo que es utilizado como Identificador único. Se conforma a través de la concatenación de los campos &apos;ConsentClientRe__c&apos; y &apos;ConsentId__c&apos;.</description>
    <externalId>true</externalId>
    <label>Consent Unique Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>