force-app/zurich-base/main/default/objects/Consent__c/fields/NationalId__c.field-meta.xml
<CustomField>
    <fullName>NationalId__c</fullName>
    <description>Campo que es informado a través del campo CONSENT_CDPASEXT recibido en la entidad ‘CONSENT’ de la External Request. El campo referencia al identificador nacional del cliente.</description>
    <label>National Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>